# labor_exchange

docs/: architecture.md  (+4 more)
src/: Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
src/bases/: base_dto.py  base_factory.py  base_proxy.py  base_web_schema.py
src/bases/brokers/: __init__.py
src/bases/repositories/: base_alchemy_repository.py  base_repository.py  redis_repository.py
src/bases/services/: base_service.py
src/bases/uows/: base_alchemy_uow.py  base_redis_uow.py  base_uow.py  generic_alchemy_uow.py
src/config/: __init__.py  app_config.py  logger_config.py  pg_config.py  redis_config.py  uvicorn_config.py
src/migrations/: env.py
src/migrations/versions/: 2026_06_27_1557-bd7541cb7bac_create_tables.py
src/models/: __init__.py  enums.py  job.py  response.py  user.py
src/models/dto/: __init__.py  job_dto.py  response_dto.py  user_dto.py
src/repositories/: job_repository.py  response_repository.py  user_repository.py
src/services/: exceptions.py  job_service.py  response_service.py  user_service.py
src/storage/sqlalchemy/: connection_proxy.py
src/tests/: conftest.py  test_exceptions.py  test_globals.py  test_logger_middleware.py  test_uow.py
src/tools/: globals.py
src/tools/di_containers/: alchemy_container.py  redis_container.py
src/tools/factories/: alchemy_engine_factory.py
src/tools/logger/: logger.py
src/uows/: job_uow.py  response_uow.py  user_uow.py
src/web/entrypoints/: index_entrypoint.py
src/web/middlewares/: logger_middleware.py
src/web/tools/: fastapi_initializer.py  router_registrator.py
(+4 files in other folders)
